# rust-youtube-downloader

./: package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
components/: audio.tsx  video.tsx
components/ui/: button.tsx
lib/types/: video-info.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
